Fix z-index on navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,6 +3,7 @@
   justify-content: space-between;
   position: sticky;
   top: 0;
+  z-index: 5;
 }
 
 .navbar .navbar-collapse {
